請求項目は最低でも1つ

--- a/templates/accountings/create_bill.html
+++ b/templates/accountings/create_bill.html
@@ -72,6 +72,7 @@
             clone_itemForm.querySelector('input[name$="volume"]').value = 1;
             clone_itemForm.querySelector('input[name$="unit"]').value = "個";
             clone_itemForm.querySelector('input[name$="amount"]').value = 0;
+            clone_itemForm.querySelector('input[name$="DELETE"]').checked = false;
 
             const labels = clone_itemForm.getElementsByTagName('label')
             for (let i = 0; i < labels.length; i++) {
