--- a/templates/accountings/create_bill.html
+++ b/templates/accountings/create_bill.html
@@ -8,7 +8,8 @@
 {% block breadcrumbs %}
     {{ block.super }}
     {% breadcrumb event.name "events:event_detail" event.id %}
-    {% breadcrumb "請求書" "events:bill_create" %}
+    {% breadcrumb "請求書" "events:bill_list" event.id %}
+    {% breadcrumb title "events:bill_create" %}
 {% endblock breadcrumbs %}
 {% block content %}
     <h1 class="fs-4 mb-3">{{ event.name }}</h1>
