--- a/templates/accountings/delete_bill.html
+++ b/templates/accountings/delete_bill.html
@@ -8,7 +8,8 @@
 {% block breadcrumbs %}
     {{ block.super }}
     {% breadcrumb event.name "events:event_detail" event.id %}
-    {% breadcrumb "請求書削除" "events:bill_delete" event.id object.pk %}
+    {% breadcrumb "請求書" "events:bill_list" event.id %}
+    {% breadcrumb "削除" "events:bill_delete" event.id object.pk %}
 {% endblock breadcrumbs %}
 {% block content %}
     <h1 class="fs-4 mb-3">{{ event.name }}</h1>
