--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
         <meta name="robots"
               content="noindex"/>
         <meta name="format-detection"
-              content="telephone=no">
+              content="telephone=no"/>
         <meta name="description"
               content="FairWind の団体内ポータルサイト"/>
         <meta name="keywords"
