--- a/templates/events/detail.html
+++ b/templates/events/detail.html
@@ -36,14 +36,28 @@
 
         編集</a>
     {% endif %}
-    <a href="{% url 'events:event_participants' event.pk %}"
-       class="btn btn-dark btn-sm">参加者一覧</a>
+    {% if object.status|stringformat:"s" != "参加者募集中" %}
+        <a href="{% url 'events:event_participants' event.pk %}"
+           class="btn btn-dark btn-sm">参加者一覧</a>
+    {% endif %}
+    {% if object.status|stringformat:"s" == "参加者募集中" or object.status|stringformat:"s" == "参加者打診中" %}
+        {% if user in event.admin.all %}
+            <a href="{% url 'events:recruitment_list' event.pk %}"
+               class="btn btn-dark btn-sm">出欠一覧</a>
+        {% endif %}
+    {% endif %}
     {% if object.status|stringformat:"s" == "参加者募集中" %}
         <a href="{% url 'events:recruitment' %}"
            class="btn btn-primary  btn-sm"
            tabindex="-1"
            role="button"
            aria-disabled="true">出欠掲示板</a>
+    {% endif %}
+    {% if user in event.admin.all %}
+        {% if object.status|stringformat:"s" != "参加者募集中" and object.status|stringformat:"s" != "参加者打診中" %}
+            <a href="{% url 'events:bill_list' event.pk %}"
+               class="btn btn-dark btn-sm">請求書</a>
+        {% endif %}
     {% endif %}
     {% if is_invited %}
         <a href="{% url 'events:event_reply_invitation' event.pk %}"
