--- a/templates/schools/detail.html
+++ b/templates/schools/detail.html
@@ -4,6 +4,10 @@
 
 {% load static %}
 
+{% block head %}
+    <link rel="stylesheet"
+          href="{% static 'utils/css/highlight.css' %}"/>
+{% endblock head %}
 {% block breadcrumbs %}
     {{ block.super }}
     {% breadcrumb object.name "schools:school_detail" object.pk %}
@@ -26,7 +30,7 @@
     編集</a>
     {% if object.memo %}
         <div class="card mb-1">
-            <div class="card-body">{{ object.memo }}</div>
+            <div class="card-body">{{ object.get_memo_html|safe }}</div>
         </div>
         <p class="text-end text-muted mb-0">最終更新：{{ object.last_updated|date:"Y/n/j H:i" }}</p>
     {% endif %}
