--- a/templates/schools/detail.html
+++ b/templates/schools/detail.html
@@ -2,6 +2,7 @@
 
 {% load django_bootstrap_breadcrumbs %}
 
+{% load md_to_html %}
 {% load static %}
 
 {% block head %}
@@ -30,7 +31,7 @@
     編集</a>
     {% if object.memo %}
         <div class="card mb-1">
-            <div class="card-body">{{ object.get_memo_html|safe }}</div>
+            <div class="card-body">{{ object.memo|md_to_html|safe }}</div>
         </div>
         <p class="text-end text-muted mb-0">最終更新：{{ object.last_updated|date:"Y/n/j H:i" }}</p>
     {% endif %}
