--- a/templates/schools/detail_update.html
+++ b/templates/schools/detail_update.html
@@ -7,7 +7,7 @@
 
 {% block head %}
     <link rel="stylesheet"
-          href="{% static 'utils/css/highlight.css' %}"/>
+          href="{% static 'utils/css/markdown.css' %}"/>
 {% endblock head %}
 {% block breadcrumbs %}
     {{ block.super }}
