templatetag側でsafestringに変換

--- a/templates/schools/detail.html
+++ b/templates/schools/detail.html
@@ -31,7 +31,7 @@
     編集</a>
     {% if object.memo %}
         <div class="card mb-1">
-            <div class="card-body">{{ object.memo|md_to_html|safe }}</div>
+            <div class="card-body">{{ object.memo|md_to_html }}</div>
         </div>
         <p class="text-end text-muted mb-0">最終更新：{{ object.last_updated|date:"Y/n/j H:i" }}</p>
     {% endif %}
