デザインを微修正

--- a/templates/reflections/list.html
+++ b/templates/reflections/list.html
@@ -22,7 +22,7 @@
         </form>
     </div>
     {% for reflection in object_list %}
-        <div class="card">
+        <div class="card mb-3">
             <div class="card-body">
                 <h5 class="card-title">{{ reflection.user }}</h5>
                 <p class="card-text">{{ reflection.reflection }}</p>
