--- a/templates/schools/detail_update.html
+++ b/templates/schools/detail_update.html
@@ -23,11 +23,8 @@
         {{ form.memo }}
         {% bootstrap_button "更新" button_type="submit" %}
     </form>
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css"/>
-    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/highlight.js/latest/highlight.min.js"></script>
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/highlight.js@11.7.0/styles/monokai.min.css"/>
+
+    {% include "components/simplemde.html" %}
+
     <script src="{% static 'utils/js/simplemde-customize.js' %}"></script>
 {% endblock content %}
