--- a/templates/reflections/edit_template.html
+++ b/templates/reflections/edit_template.html
@@ -6,6 +6,8 @@
 {% load django_bootstrap_breadcrumbs %}
 
 {% block head %}
+    <link rel="stylesheet"
+          href="{% static 'events/reflection_md.css' %}"/>
 {% endblock head %}
 {% block breadcrumbs %}
     {{ block.super }}
