--- a/templates/reflections/list.html
+++ b/templates/reflections/list.html
@@ -38,7 +38,7 @@
         <div class="collapse mt-3"
              id="collapseTemplate">
             <div class="card card-body bg-light">
-                <textarea class="form-control bg-light" placeholder="Leave a comment here" id="floatingTextarea2" readonly onfocus="this.select()">{{template.reflection}}</textarea>
+                <textarea class="form-control bg-light" placeholder="振り返りのテンプレート" id="floatingTextarea2" readonly onfocus="this.select()">{{template.reflection}}</textarea>
                 {% if user in event.admin.all %}
                     <div class="mt-3">
                         <a class="btn btn-danger btn-sm"
