--- a/templates/reflections/list.html
+++ b/templates/reflections/list.html
@@ -25,7 +25,7 @@
               style="visibility:hidden">
             {% csrf_token %}
             {{ form.reflection }}
-            {% bootstrap_button "送信" button_type="submit" %}
+            {% bootstrap_button "保存" button_type="submit" %}
             <button class="btn btn-secondary"
                     type="button"
                     data-bs-toggle="collapse"
