--- a/static/utils/css/table-responsive.css
+++ b/static/utils/css/table-responsive.css
@@ -1,3 +1,7 @@
+.card {
+    overflow: hidden;
+}
+
 .table-responsive {
     background: linear-gradient(to left, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.1)) 0 0/20px 100%, linear-gradient(to right, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.1)) right/20px 100%;
     background-repeat: no-repeat;
