--- a/templates/reflections/list.html
+++ b/templates/reflections/list.html
@@ -26,8 +26,10 @@
 {% block content %}
     <h4 class="mb-3">{{ event.name }}</h4>
     <!-- Button trigger modal -->
-    <a href="{% url 'events:reflection_post' event.pk %}"
-       class="btn btn-primary mb-3">編集</a>
+    {% if user.pk in event.get_participants %}
+        <a href="{% url 'events:reflection_post' event.pk %}"
+           class="btn btn-primary mb-3">編集</a>
+    {% endif %}
     {% for reflection in object_list %}
         <div class="card mb-3">
             <div class="card-header">{{ reflection.user }}</div>
