--- a/templates/calendar/month_with_forms.html
+++ b/templates/calendar/month_with_forms.html
@@ -25,7 +25,7 @@
                     <tr>
                         {% for day, forms in week_day_forms.items %}
                             {% if now == day %}
-                                <td class="table-success">
+                                <td class="table-danger">
                                     <div>
                                         {% if month_current.month != day.month %}
                                             {{ day | date:"m/d" }}
