--- a/templates/base.html
+++ b/templates/base.html
@@ -120,6 +120,10 @@
                                     <a class="dropdown-item"
                                        href="{% url 'calendar:month_with_forms' %}">一括登録付き月間カレンダー</a>
                                 </li>
+                                <li>
+                                    <a class="dropdown-item"
+                                       href="{% url 'calendar:integration' %}">カレンダー照会</a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item">
