マイカレンダーを実装

--- a/templates/base.html
+++ b/templates/base.html
@@ -98,27 +98,7 @@
                                 aria-labelledby="navbarCalendar">
                                 <li>
                                     <a class="dropdown-item"
-                                       href="{% url 'calendar:month' %}">月間カレンダー</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item"
-                                       href="{% url 'calendar:week' %}">週間カレンダー</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item"
-                                       href="{% url 'calendar:month_with_schedule' %}">スケジュール付き月間カレンダー</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item"
-                                       href="{% url 'calendar:week_with_schedule' %}">スケジュール付き週間カレンダー</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item"
-                                       href="{% url 'calendar:mycalendar' %}">登録機能付き月間・週間カレンダー</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item"
-                                       href="{% url 'calendar:month_with_forms' %}">一括登録付き月間カレンダー</a>
+                                       href="{% url 'calendar:mycalendar' %}">マイカレンダー</a>
                                 </li>
                                 <li>
                                     <a class="dropdown-item"
